vlib/v/parser/tests/match_invalid_case_expr_err.vv
fn test_match_invalid_case_expr() {
	x := 1
	match true {
		x >  {
			y := 0
		}
		else {}
	}
}
